# fleece

./: .copyrightignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Deltas.md  Example.md  Fleece.md  FleeceStorage.md  Makefile  Performance.md  README.md  SharedKeys.md  appveyor.yml  fleece format.txt  fleece2 format.txt  index.html
.github/workflows/: cmake.yml
API/: Fleece+CoreFoundation.h  Fleece.h
API/fleece/: Base.h  Base.hh  CompilerSupport.h  Expert.hh  FLBase.h  FLCollections.h  FLDeepIterator.h  FLDoc.h  FLEncoder.h  FLExpert.h  FLJSON.h  FLKeyPath.h  FLMutable.h  FLSlice.h  FLValue.h  Fleece+CoreFoundation.h  Fleece.h  Fleece.hh  InstanceCounted.hh  JSONSchema.hh  Mutable.hh  PlatformCompat.hh  RefCounted.hh  WeakRef.hh  slice.hh  slice_stream.cc  slice_stream.hh
C/html/: _f_l_slice_8h_source.html  _fleece_09_core_foundation_8h_source.html  _fleece_8h_source.html  annotated.html  annotated_dup.js  classes.html  dir_19ea4dbfe8f0e4681f60b9b97f7b5d11.html  dir_3d6d356bd36ad8eab4818c99adbd6774.html  functions.html  functions_vars.html  group___c_f.html  group___c_f.js  group___f_l_array.html  group___f_l_array.js  group___f_l_deep_iterator.html  group___f_l_deep_iterator.js  group___f_l_deep_iterator_struct_f_l_path_component.js  group___f_l_dict.html  group___f_l_dict.js  group___f_l_encoder.html  group___f_l_encoder.js  group___f_l_key_path.html  group___f_l_key_path.js  group___f_l_shared_keys.html  group___f_l_shared_keys.js  group___f_l_slice.html  group___f_l_slice.js  group___f_l_slice_struct_f_l_slice.js  group___f_l_slice_struct_f_l_slice_result.js  group___f_l_value.html  group___f_l_value.js  group__delta.html  group__delta.js  group__json.html  group__json.js  group__reading.html  group__reading.js  group__types.html  group__types.js  index.html  (+4 more)
Cpp/html/: _base_8hh_source.html  _fleece_8hh_source.html  _mutable_8hh_source.html  annotated.html  annotated_dup.js  classes.html  classfleece_1_1_alloced_dict-members.html  classfleece_1_1_alloced_dict.html  classfleece_1_1_alloced_dict.js  classfleece_1_1_array-members.html  classfleece_1_1_array.html  classfleece_1_1_array.js  classfleece_1_1_array_1_1iterator-members.html  classfleece_1_1_array_1_1iterator.html  classfleece_1_1_array_1_1iterator.js  classfleece_1_1_deep_iterator-members.html  classfleece_1_1_deep_iterator.html  classfleece_1_1_deep_iterator.js  classfleece_1_1_dict-members.html  classfleece_1_1_dict.html  classfleece_1_1_dict.js  classfleece_1_1_dict_1_1_key-members.html  classfleece_1_1_dict_1_1_key.html  classfleece_1_1_dict_1_1_key.js  classfleece_1_1_dict_1_1iterator-members.html  classfleece_1_1_dict_1_1iterator.html  classfleece_1_1_dict_1_1iterator.js  classfleece_1_1_doc-members.html  classfleece_1_1_doc.html  classfleece_1_1_doc.js  classfleece_1_1_encoder-members.html  classfleece_1_1_encoder.html  classfleece_1_1_encoder.js  classfleece_1_1_encoder_1_1keyref-members.html  classfleece_1_1_encoder_1_1keyref.html  classfleece_1_1_encoder_1_1keyref.js  classfleece_1_1_j_s_o_n5_encoder-members.html  classfleece_1_1_j_s_o_n5_encoder.html  classfleece_1_1_j_s_o_n5_encoder.js  classfleece_1_1_j_s_o_n_delta-members.html  (+114 more)
Documentation/: Doxyfile  Doxyfile_C++
Experimental/: BTree.cc  BTree.hh  Delta.cc  Delta.hh  FleeceDocument.h  FleeceDocument.mm  KeyTree.cc  KeyTree.hh  MutableBTree.cc  MutableBTree.hh  Val.cc  Val.hh
Fleece/: Array.cc  Array.hh  Benchmark.hh  Bitmap.hh  DeepIterator.cc  DeepIterator.hh  Dict.cc  Dict.hh  DictImpl.hh  ESPMappedSlice.cc  ESPMappedSlice.hh  ESPPartitionFile.cc  ESPPartitionFile.hh  Encoder+ObjC.mm  Encoder.cc  Encoder.hh  Encoder_old.cc  Endian.h  Endian.hh  ExternResolver.hh  FLSlice.h  FileUtils.cc  Fleece+CoreFoundation.h  Fleece+CoreFoundation.mm  Fleece.cpp  Fleece.exp  Fleece.h  Fleece.hh  Fleece.hpp  Fleece.pch  FleeceCpp.hh  FleeceDocument.h  FleeceDocument.mm  FleeceException.cc  FleeceException.hh  FleecePriv.hpp  Fleece_C_impl.cc  Fleece_C_impl.hh  HAMTree.cc  HAMTree.hh  (+54 more)
Fleece.xcodeproj/: project.pbxproj
Fleece.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Fleece/API_Impl/: FLEncoder.cc  FLSlice.cc  Fleece+ImplGlue.hh  Fleece.cc  JSONSchema.cc  slice_stream.cc
Fleece/Core/: Array.cc  Array.hh  Builder.cc  Builder.hh  DeepIterator.cc  DeepIterator.hh  Delta.cc  Delta.hh  Dict.cc  Dict.hh  Doc.cc  Doc.hh  Encoder.cc  Encoder.hh  ExternResolver.cc  Fleece.hh  FleeceImpl.hh  Fleece_C_impl.cc  Internal.hh  JSLexer.hh  JSONConverter.cc  JSONConverter.hh  JSONDelta.cc  JSONDelta.hh  Path.cc  Path.hh  Pointer.cc  Pointer.hh  SharedKeys.cc  SharedKeys.hh  Value+Dump.cc  Value.cc  Value.hh
Fleece/DB/: DB.cc  DB.hh  ESPMappedSlice.cc  ESPMappedSlice.hh  ESPPartitionFile.cc  MappedFile.cc  MappedFile.hh  mmap_slice.cc  mmap_slice.hh
Fleece/Integration/: MArray.hh  MCollection.hh  MContext.cc  MContext.hh  MDict.hh  MDictIterator.hh  MRoot.hh  MValue.hh  README.md
Fleece/Mutable/: FleeceDocument.h  FleeceDocument.mm  HeapArray.cc  HeapArray.hh  HeapDict.cc  HeapDict.hh  HeapValue.cc  HeapValue.hh  MArray.hh  (+22 more)
MSVC/: memmem.cc  memmem.h
ObjC/: Encoder+ObjC.mm  Fleece+CoreFoundation.h  Fleece+CoreFoundation.mm  FleeceDocument.mm  Value+ObjC.mm  slice+CoreFoundation.cc  slice+ObjC.mm  slice.mm
Tests/: 1000people.json  1person-deepIterOutput.txt  1person-shallowIterOutput.txt  1person.fleece  1person.json  1personFleece.h  50peopleJSON.h  API_ValueTests.cc  BTreeTests.cc  BacktraceTest.cc  BuilderTests.cc  C_Test.c  DBTests.cc  DeltaTests.cc  DeltaTests.json5  ESP32Tests.cc  EncoderTests.cc  FleeceTests.cc  FleeceTests.hh  FleeceTestsMain.cc  HAMTreeTests.cc  HashTreeTests.cc  JSON5Tests.cc  MutableTests.cc  NumericTests.cc  ObjCTests.mm  PerfTests.cc  SchemaTests.cc  SharedKeysTests.cc  SupportTests.cc  ValueTests.cc  ValueTests.cpp  mn_wordlist.h  travel-schema.json
Tool/: fleece_tool.cc
build_cmake/: build.ps1  build.sh
cmake/: platform_apple.cmake  platform_base.cmake  platform_emscripten.cmake  platform_linux.cmake  platform_win.cmake
licenses/: BSL-Couchbase.txt
scripts/: run_tests_with_nodejs.sh
(+219 files in other folders)
